--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <h1> José D. Vélez M.</h1>
     <main class="main" id="home-id">
         <div class="info-main">
-            <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum!</p>
-            <p class="span"><span class="años">+5 años</span> de experiencia</p>
+            <p class="main-text">Estudiante de programacion web full stack en Academlo</p>
+            <p class="span"><span class="años">1 año</span> de estudio</p>
             <ul class="icons-main">
                 <li><svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_57_826)">
@@ -71,18 +71,22 @@
 
 <div class="about" id="about-id">
     <h2 class="about-tittle">Acerca de mí</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatibus nam minus necessitatibus doloremque, harum eveniet? Sunt autem maxime, architecto, veritatis et provident culpa quidem neque consequuntur modi, quae voluptatum.</p>
+    <p>
+        Mi nombre es José Daniel Vélez Muñetón, tengo 23 años y soy de Colombia, vivo actualmente en la ciudad de Medellín y me encuentro estudiando programacion 
+        en Academlo. Estudie para Piloto Comercial de Avión en la escuela de aviación los Halcones y realicé 30 horas de vuelo pero no finalice la carrera al igual 
+        que Ingenieria Industrial donde cursé 6 semestres de estudio en la Universidad de Antioquia.
+    </p>
     
     <div class="icons-aboutme">
-        <div><img src="./assets/imagenes/image 9.jpg" alt="imagen UVM"></div>
+        <div><img src="./assets/imagenes/upload-1448423401001.png.th.jpg" alt="imagen Halcones"></div>
         <div class="empty"> </div>
         <div><img src="./assets/imagenes/logo_academlo 5.jpg" alt="imagen ACADEMLO"></div>
-        <div class="aboutme-subtitle">UVM</div>
+        <div class="aboutme-subtitle">Halcones</div>
         <div class="empty"> </div>
         <div class="aboutme-subtitle">Academlo</div> 
-        <div>2010 - 2014</div>
+        <div>2015 - 2017</div>
         <div class="empty"> </div>
-        <div>2020 - 2021</div>
+        <div>2022 - Actualidad</div>
     </div>
 </div>
 
